--- a/backend/.env.example
+++ b/backend/.env.example
@@ -15,7 +15,7 @@ JWT_REFRESH_EXP_IN=7d
 MAIL_HOST=
 MAIL_USER=
 MAIL_PASSWORD=
-MAIL_FROM=noreply@tunlog.com
+MAIL_FROM=noreply@something.com
 
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
